@@ -27,7 +27,7 @@ import org.apache.pinot.tools.admin.PinotAdministrator;
 public class BatchQuickstartWithMinion extends Quickstart {
   @Override
   public List<String> types() {
-    return List.of("OFFLINE_MINION", "BATCH_MINION", "OFFLINE-MINION", "BATCH-MINION");
+    return Arrays.asList("OFFLINE_MINION", "BATCH_MINION", "OFFLINE-MINION", "BATCH-MINION");
   }
 
   public String getBootstrapDataDir() {
