@@ -24,6 +24,7 @@ import java.io.File;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import org.apache.commons.io.FileUtils;
 import org.apache.pinot.tools.admin.PinotAdministrator;
@@ -37,7 +38,7 @@ public class JoinQuickStart extends QuickStartBase {
 
   @Override
   public List<String> types() {
-    return List.of("JOIN");
+    return Collections.singletonList("JOIN");
   }
 
   public void execute()
