@@ -20,15 +20,6 @@ package org.apache.pinot.tools;
 
 import com.google.common.base.Preconditions;
 import com.google.common.collect.Lists;
-import java.io.File;
-import java.net.URL;
-import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Properties;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.LineIterator;
 import org.apache.pinot.common.utils.ZkStarter;
@@ -39,6 +30,11 @@ import org.apache.pinot.tools.Quickstart.Color;
 import org.apache.pinot.tools.admin.PinotAdministrator;
 import org.apache.pinot.tools.admin.command.QuickstartRunner;
 import org.apache.pinot.tools.utils.KafkaStarterUtils;
+
+import java.io.File;
+import java.net.URL;
+import java.nio.charset.StandardCharsets;
+import java.util.*;
 
 import static org.apache.pinot.tools.Quickstart.prettyPrintResponse;
 import static org.apache.pinot.tools.Quickstart.printStatus;
@@ -51,7 +47,7 @@ import static org.apache.pinot.tools.Quickstart.printStatus;
 public class RealtimeQuickStartWithMinion extends QuickStartBase {
   @Override
   public List<String> types() {
-    return List.of("REALTIME_MINION", "REALTIME-MINION");
+    return Arrays.asList("REALTIME_MINION", "REALTIME-MINION");
   }
 
   private StreamDataServerStartable _kafkaStarter;
